--- a/src/app/views/products/skincare/skincare.component.html
+++ b/src/app/views/products/skincare/skincare.component.html
@@ -3,6 +3,6 @@
   <p>THIS IS THE GUUD SKINCARE SECTION</p>
 
   <div class="row col-3">
-    <button routerLink="/products">back</button>
+    <button routerLink="/es/productos">back</button>
   </div>
 </div>
