--- a/src/app/views/products/supplements/supplements.component.html
+++ b/src/app/views/products/supplements/supplements.component.html
@@ -4,6 +4,6 @@
   <p>THIS IS THE GUUD SUPPLEMENTS SECTION</p>
 
   <div class="row col-3">
-    <button routerLink="/products">back</button>
+    <button routerLink="/es/productos">back</button>
   </div>
 </div>
