--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -1,8 +1,14 @@
 <div style="position: relative;background-color: #f8f8f8;">
   <div class="row" style="margin:0;">
     <div class="col-sm-12 col-md-6">
-      <div class="rights"><img src="assets/logos_icons/G.webp" alt="GUUD Wishes" width="25" height="25" style="position: relative;bottom: 3px;">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span><span
-          class="separator"></span> <span i18n>Notice of Privacy</span></div>
+      <div class="rights">
+        <img src="assets/logos_icons/G.webp" alt="GUUD Wishes" width="25" height="25" style="position: relative;bottom: 3px;" routerLink="/terminos">
+        GUUD&#174; 2023
+        <span class="separator"></span>
+        <span i18n>All rights reserved</span>
+        <span class="separator"></span>
+        <span i18n>Notice of Privacy</span>
+      </div>
     </div>
     <div class="col-sm-12 col-md-6">
       <div class="row" style="white-space: nowrap;color:#707070;line-height: 4rem;">
