--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -2,7 +2,7 @@
   MENU CATEGORIAS
 
   <ul class="categoryList">
-    <li routerLink="/es/productos/suplementos">Suplementos</li>
-    <li routerLink="/es/productos/skincare">Skincare</li>
+    <li routerLink="/productos/suplementos">Suplementos</li>
+    <li routerLink="/productos/skincare">Skincare</li>
   </ul>
 </div>
