--- a/src/app/views/terminos/terminos.component.html
+++ b/src/app/views/terminos/terminos.component.html
@@ -1,4 +1,7 @@
 <div class="terminos">
+  <div class="row">
+    <div class="col-4 offset-8" style='font-size:13px;color:#00B050;text-align:right;' i18n>US</div>
+  </div>
   <p style='margin-right:0cm;margin-left:0cm;font-size:15px;margin-top:0cm;margin-bottom:10.0pt;line-height:30.05pt;vertical-align:baseline;'>
     <strong>
       <span style='font-size:13px;color:#00B050;'>T&Eacute;RMINOS Y CONDICIONES&nbsp;</span>
