--- a/src/app/guudcomponents/menu/langmenu/langmenu.component.html
+++ b/src/app/guudcomponents/menu/langmenu/langmenu.component.html
@@ -6,7 +6,7 @@
     <span style="display: inline-block;margin-left: 0.5rem;top: 0.2rem;position: relative;color:#707070;" i18n>EN</span>
   </label>
   <ul class="langlist">
-    <li i18n (click)="changeLang('es')">Spanish</li>
+    <li i18n (click)="changeLang('esMX')">Spanish</li>
     <li i18n (click)="changeLang('en')">English</li>
   </ul>
 </div>
